// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form text component should render disabled when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  >
    TextArea field
  </label>
  <input
    class="govuk-input"
    disabled=""
    id="text-field"
    name="text-field"
    type="text"
    value=""
  />
</div>
`;

exports[`Form text component should render of type when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  >
    TextArea field
  </label>
  <input
    class="govuk-input"
    id="text-field"
    name="text-field"
    type="password"
    value=""
  />
</div>
`;

exports[`Form text component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  >
    TextArea field
  </label>
  <input
    class="govuk-input"
    id="text-field"
    name="text-field"
    type="text"
    value=""
  />
</div>
`;

exports[`Form text component should render with error when passed 1`] = `
<div
  class="govuk-form-group govuk-form-group--error"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  >
    TextArea field
  </label>
  <span
    class="govuk-error-message"
    id="text-field-error"
  >
    Some error message
  </span>
  <input
    class="govuk-input govuk-input--error"
    id="text-field"
    name="text-field"
    type="text"
    value=""
  />
</div>
`;

exports[`Form text component should render with hint when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  >
    TextArea field
  </label>
  <span
    class="govuk-hint"
  >
    Put some text in the box below
  </span>
  <input
    class="govuk-input"
    id="text-field"
    name="text-field"
    type="text"
    value=""
  />
</div>
`;

exports[`Form text component should render with label when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  >
    My text field
  </label>
  <input
    class="govuk-input"
    id="text-field"
    name="text-field"
    type="text"
    value=""
  />
</div>
`;

exports[`Form text component should render with value when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  >
    TextArea field
  </label>
  <input
    class="govuk-input"
    id="text-field"
    name="text-field"
    type="text"
    value="field value"
  />
</div>
`;
